# dl-doc

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  STYLE_GUIDE.md  version_template.adoc
docs/: CMakeLists.txt  index.adoc
docs/cmake/: Doxygen.cmake  GitVersion.cmake  cpp-httplib.cmake  extra_header
docs/doc/: CMakeLists.txt  admin_guide_template.adoc.in  briefingprocess.adoc  doc_title.adoc  doc_title_template.adoc.in  docinfo-header.html.in  keycloak.adoc  library.adoc  quick_reference_guide.adoc  user_guide_template.adoc.in
docs/doc/chapters/admin/: contacts.adoc  infrastructure.adoc.in  keycloak.adoc  library.adoc  users.adoc
docs/doc/chapters/user/: briefing.adoc  briefingprocess.adoc  documentation.adoc  eforms.adoc  home.adoc  quick_reference_guide.adoc
docs/doc/common/: guide_attributes.adoc.in
docs/doc/images/mui/: .gitkeep
docs/doc/styles/: freebsd-pdf-theme.yml  freebsd-theme.css
docs/scripts/mui-screenshots/: README.md  capture.js  mui-screenshots.config.json  package-lock.json  package.json
scripts/: clean-build.sh
